--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Extract nautilus-trader version
+        id: version
+        run: |
+          VERSION=$(grep -oP 'nautilus-trader==\K[0-9.]+' requirements.txt)
+          echo "tag=$VERSION" >> "$GITHUB_OUTPUT"
+
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/login-action@v3
@@ -33,6 +39,6 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/nautilus-trader-base:latest
-            ghcr.io/${{ github.repository_owner }}/nautilus-trader-base:${{ github.run_id }}
+            ghcr.io/${{ github.repository_owner }}/nautilus-trader-base:${{ steps.version.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
