--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Nautilus Trader live multi-strategy runner dependencies
-nautilus-trader>=1.220.0
+nautilus-trader==1.223.0
 pandas>=2.0.0
 numpy>=1.24.0
 ta-lib>=0.4.28
